\name{NEWS}
\title{News for Package \pkg{WeightSVM}}

\section{Changes in version 1.7-9}{
  \itemize{
    \item Remove configure code testing for gcc 2.96.
  }
}

\section{Changes in version 1.7-5}{
  \itemize{
    \item Add documents
  }
}

\section{Changes in version 1.7-4}{
  \itemize{
    \item Fix memory leakage
  }
}
