@@ -1,6 +1,12 @@
 \name{NEWS}
 \title{News for Package \pkg{WeightSVM}}
 
+\section{Changes in version 1.8-0}{
+  \itemize{
+    \item Add 'percomputed' kernel.
+  }
+}
+
 \section{Changes in version 1.7-9}{
   \itemize{
     \item Remove configure code testing for gcc 2.96.
